kube/azurewebsiets/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: azurewebsiets
spec:
  finalizers:
    - kubernetes
