kube/azurewebsiets/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: azurewebsiets
spec:
  # type: LoadBalancer
  ports:
    - port: 80
  selector: 
    app: nginx
