kube/azurewebsiets/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front
  namespace: azurewebsiets
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
        # - "*.azurewebsiets.net"
        - azurewebsiets.net
      secretName: azurewebsiets-tls
  rules:
    # - host: "*.azurewebsiets.net"
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: front
    #             port:
    #               number: 80
    - host: azurewebsiets.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 80
